# LLM-Engineering-Sandbox

./: .env.example  .gitignore  README.md  requirements.txt
basics/010-anthropic-api-samples/: README.md  sample-api-temperature.py  sample-content-classification.py
basics/015-prompting-samples/: prompt-customer-support.py
basics/020-production-sample/: README.md  app.py
basics/030-multi-message-conversations/: README.md  multi-message-conversation.py  multi-message-iterative-conversation.py
basics/050-openai-api-samples/: README.md  sample-text-editing.py
building-ai-agents/01-ai-assistant-with-tool-calling/: README.md  main.py  pyproject.toml
building-ai-agents/02-ai-assistant-with-function-calling/: .gitignore  README.md  main.py  pyproject.toml
building-ai-agents/03-multi-tool-customer-service-agent/: .gitignore  README.md  database.py  dummy_database.db  main.py  pyproject.toml
building-ai-agents/05-multi-agent-research-workflow/: .env.example  .gitignore  README.md  agents.py  database.py  main.py  pyproject.toml  schemas.py  search_client.py  tools.py
building-ai-agents/05-multi-agent-research-workflow/diagrams/: .$multi-agent-research-workflow.drawio.bkp
building-ai-agents/05-multi-agent-research-workflow/prompts/: research-planner-agent.txt  summary-report-agent.txt  web-search-agent.txt
building-ai-agents/05-multi-agent-research-workflow/searxng/: settings.yml.example
building-ai-agents/05-multi-agent-research-workflow/sql/: create_research_plans_table.sql  delete_research_plan.sql  get_research_plans.sql  insert_research_plan.sql
(+148 files in other folders)
